# longtailfox-seo-geo-audit

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: test.yml
longtailfox-seo-geo-audit/: SKILL.md  requirements.txt
longtailfox-seo-geo-audit/agents/: openai.yaml
longtailfox-seo-geo-audit/references/: AUDIT_RUBRIC.md  RESULT_SCHEMA.md
longtailfox-seo-geo-audit/scripts/: run-audit.py
longtailfox-seo-geo-audit/src/longtailfox_audit/: __init__.py  audit.py  checks.py  cli.py  fetcher.py  models.py  page.py  pagespeed.py  pdf.py  report.py  scoring.py  security.py  sitemap.py
longtailfox-seo-geo-audit/src/longtailfox_audit/templates/: report.html
scripts/: validate_skill.py
tests/: test_page_checks.py  test_pagespeed.py  test_report.py  test_scoring.py  test_security.py
