[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "longtailfox-seo-geo-audit"
version = "0.1.0"
description = "Longtail Fox branded SEO/GEO audit Skill and CLI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Longtail Fox"}]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "defusedxml>=0.7,<1",
  "jinja2>=3.1,<4",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
]

[project.scripts]
longtailfox-audit = "longtailfox_audit.cli:main"

[tool.setuptools]
package-dir = {"" = "longtailfox-seo-geo-audit/src"}

[tool.setuptools.packages.find]
where = ["longtailfox-seo-geo-audit/src"]

[tool.setuptools.package-data]
longtailfox_audit = ["templates/*.html", "assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
